[gd_scene load_steps=3 format=3 uid="uid://bf6w44n3pgjmv"]

[ext_resource type="Script" path="res://hud.gd" id="1_xlyqf"]
[ext_resource type="Script" path="res://Button.gd" id="2_hu457"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xlyqf")

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -221.5
offset_right = 221.5
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Nothing is Normal"

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 81.0
offset_top = 56.0
offset_right = 116.0
offset_bottom = 125.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "0"

[node name="ScoreStr" type="Label" parent="."]
offset_left = 460.0
offset_top = 58.0
offset_right = 661.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 50
text = "Score:"

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[node name="Button" type="Button" parent="."]
offset_left = 447.0
offset_top = 377.0
offset_right = 715.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 50
text = "Start"
script = ExtResource("2_hu457")

[node name="TimeStr" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 30
text = "
"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
